# certificate

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml  fortify.yml
docs/plans/: 2026-03-03-csr-generator-design.md  2026-03-03-csr-generator-plan.md
docs/superpowers/plans/: 2026-03-26-homebrew-cask-distribution.md  2026-03-26-pfx-aia-intermediate-fetch.md
docs/superpowers/specs/: 2026-03-26-homebrew-cask-distribution-design.md  2026-03-26-pfx-aia-intermediate-fetch-design.md
src/certificate/: aia.py  chain.py  csr.py  gui.py  main.py  pfx.py  selfsigned.py
tests/: test_aia.py  test_chain.py  test_csr.py  test_pfx.py  test_selfsigned.py
