[project]
name = "certificate"
version = "0.3.2"
description = "Cross-platform CSR generator with GUI"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
]

[project.scripts]
certificate = "certificate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
build = [
    "nuitka",
    "ordered-set",
]
